--- a/style.css
+++ b/style.css
@@ -309,6 +309,11 @@ section {
   text-align: left;
 }
 
+.bullet-point {
+  opacity: 0; /* 确保初始透明度为0 */
+  transition: opacity 0.5s ease; /* 添加过渡效果 */
+}
+
 .section__pic-container {
   height: 400px;
   width: 400px;
