--- a/style.css
+++ b/style.css
@@ -218,6 +218,8 @@ section {
   display: flex;
   justify-content: center;
   gap: 1rem;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .btn {
@@ -226,6 +228,10 @@ section {
   padding: 1rem;
   width: 8rem;
   border-radius: 2rem;
+  white-space: nowrap;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .btn-color-1,
