--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -159,3 +159,50 @@
         height: fit-content;
     }
 }
+
+/* Gallery Section */
+#gallery {
+    padding: 4vh 0;
+    text-align: center;
+    margin-top: 6rem;
+}
+
+.gallery-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* 调整最小宽度 */
+    gap: 1rem;
+    margin: 0 auto;
+    max-width: 1500px;
+    width: 100%;
+}
+
+.gallery-item {
+    overflow: hidden;
+    border-radius: 1rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto; /* 允许高度自适应 */
+    max-height: 400px; /* 增加最大高度 */
+}
+
+.gallery-image {
+    width: 100%;
+    height: 100%; /* 确保图片高度填充容器 */
+    object-fit: cover; /* 确保图片填充整个容器 */
+    display: block;
+}
+
+/* 媒体查询 */
+@media screen and (min-width: 1200px) {
+    .gallery-container {
+        grid-template-columns: repeat(auto-fill, minmax(350px 1fr)); /* 增加最小宽度以适应更大的窗口 */
+    }
+
+    .gallery-item {
+        max-height: 400px; /* 在更宽的窗口中增加最大高度 */
+    }
+}
