--- a/style.css
+++ b/style.css
@@ -478,14 +478,14 @@ footer p {
 
 
 .gallery-container {
-    display: grid;
+    display:grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1rem;
     margin-top: 2rem;    /* 上边距为 2rem */
     margin-bottom: 2rem; /* 下边距为 2rem */
     margin-left: auto;   /* 左边距自动计算 */
     margin-right: auto;
-    max-width: 1500px;
+    max-width: auto;
     width: 100%;
 }
 
@@ -498,7 +498,7 @@ footer p {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 300px;
+    height: auto;
 }
 
 .gallery-image {
