--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ section {
   border-radius: 2rem;
 }
 
-.about-containers,
+.about-containers, .projects-about-containers, 
 .about-details-container {
   display:flex;
 }
@@ -287,7 +287,7 @@ section {
   justify-content: center;
 }
 
-.about-containers {
+.about-containers, .projects-about-containers{
   display: flex;
   gap: 2rem;
   margin-top: 2rem;
@@ -295,7 +295,7 @@ section {
 }
 
 .details-container {
-  min-width: 200px;
+  min-width: 300px;
   flex: 1;
   padding: 1.5rem;
   background: white;
@@ -330,6 +330,7 @@ section {
 .section-container {
   gap: 4rem;
   height: 80%;
+  justify-content: center;
 }
 
 .arrow {
@@ -483,8 +484,8 @@ footer p {
 
 
 .gallery-container {
-    display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    display:flex;
+    flex-wrap: wrap;
     gap: 1rem;
     margin-top: 2rem;    /* 上边距为 2rem */
     margin-bottom: 2rem; /* 下边距为 2rem */
@@ -492,6 +493,7 @@ footer p {
     margin-right: auto;
     max-width: 1800px;
     margin-left: auto;   /* 左边距自动计算 */
+    justify-content: center;
 }
 
 .gallery-item {
@@ -502,7 +504,8 @@ footer p {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    min-width: 250px;
+    max-width: 500px;
     height: auto;
 }
 
