--- a/style.css
+++ b/style.css
@@ -294,6 +294,10 @@ section {
   margin-bottom: 2rem;
 }
 
+.projects-about-containers {
+  justify-content: center;
+}
+
 .details-container {
   min-width: 300px;
   flex: 1;
@@ -362,6 +366,10 @@ section {
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: calc(75%);
+  flex-wrap: wrap;
 }
 
 .skills-container {
@@ -403,6 +411,7 @@ section {
 .color-container {
   border-color: rgb(163, 163, 163);
   background: rgb(250, 250, 250);
+  max-width: 700px;
 }
 
 .project-pic {
