--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -183,5 +183,8 @@
     }
 }
 
-/* Gallery Section */
-
+@media screen and (min-width:400px ){
+    .experience-container {
+    max-width: calc(80%);
+  }    
+}
