--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -91,6 +91,10 @@
         margin-top: 0;
     }
 
+    .about-containers {
+        flex-wrap: wrap;
+    }
+
     #gallery {
         margin-bottom: 2rem;
     }
@@ -183,8 +187,13 @@
     }
 }
 
-@media screen and (min-width:400px ){
+@media screen and (min-width:500px ){
     .experience-container {
     max-width: calc(80%);
-  }    
+  }   
+}
+@media screen and (max-width:400px ){
+    #experience {
+        min-width: fit-content;
+      } 
 }
