--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ section {
 
 
 .details-container {
-  min-width: 300px;
+  min-width: 250px;
   flex: 1;
   padding: 1.5rem;
   background: white;
@@ -361,6 +361,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-width:fit-content;
 }
 
 .experience-container {
